# midi2exp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ExpCreator.h  Expressionizer.h  MidiRoll.h
include/midifile/: MidiFile.h
python/: exp_util.py
src/: ExpCreator.cpp  Expressionizer.cpp  MidiRoll.cpp
src/midifile/: MidiFile.cpp
tools/: midi2exp.cpp  velocities.cpp
